minor bugs and layout issues, removing inline styles

--- a/app/static/css/zipp-styles.css
+++ b/app/static/css/zipp-styles.css
@@ -233,7 +233,7 @@ body .pad-nav{
 	font-family: Lora, serif;
 }
 .article-body-text{
-	font-family: Abel, sans;
+	font-family: Noto Sans, sans;
 }
 #dismiss:hover{
 	color:#CC1A40;
